--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -12,7 +12,7 @@
     width: 28px;
     height: 3px;
     margin: 0 0 5px 0;
-    background: #fff;
+    background: set-text-color($primary-color);
     @include easeIn;
   }
 
@@ -93,7 +93,6 @@
       width: 250px;
       height: 259px;
       background: (url("../img/portrait2.png"));
-
       border-radius: 50%;
       border: solid 4px $secondary-color;
     }
@@ -119,7 +118,7 @@
     text-transform: uppercase;
     padding: 1rem 0;
     font-weight: 450;
-    color: #fff;
+    color: set-text-color($primary-color);
     text-decoration: none;
     @include easeIn;
 
